syntax = "proto3";

package gorpc;

message StatusResponse {
	repeated string domains = 4;
	repeated string paths = 5;
}

message Request {
	string version = 2;
	uint64 id = 3;
	bytes uri = 4;
	string method = 5; // GET, POST, PUT, DELETE, HEAD or OPTION
	bytes body = 6;
	bytes user_agent = 8;
	map<string, bytes> cookie = 9;
	map<string, bytes> header = 10;
	string remote_addr = 11;
	string referer = 12;
	int64 received = 15;
	string path = 16; // dont contain query
	string host = 17; // domain and port
	map<string, bytes> form1 = 18;
	map<string, bytes> query1 = 19;
	map<string, string> form = 20;
	map<string, string> query = 21;
}

message Response {
	string version = 2;
	uint64 id = 3;
	int32 status_code = 4;
	bytes body = 5;
	map<string, bytes> header = 10;
	repeated Cookie cookies = 12;
}

message Cookie {
	string name = 2;
	bytes value = 3;
	string path = 4;
	string domain = 5;
	int64 expired_sec = 6;
	bool secure = 8;
	bool http_only = 9;
}
